--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Excursion
+<!DOCTYPE html>
+<link rel='stylesheet' href='../ARW9.github.io/style.css'>
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+    </header>
+        <body>
+            <h6>Download Excursion (Coming soon!)</h6>
+            <p> 
+                <video width=15% autoplay>
+                <source src='../ARW9.github.io/Resources/excursion.mp4'>
+                Your video is not supported
+                </video>
+            </p>
+            </section>
+            <section>
+                <h2> Your personal travel guide</h2>
+                    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+                    <img src='../ARW9.github.io/Resources/camp.webp' class='tent' width=650 height=auto>
+            </section>
+        </body>
+        <br>
+    <footer>
+        <img src='../ARW9.github.io/Resources/phone.webp' class='logo' width=30>
+        <h2>Coming soon for iPhone and Android</h2>
+        <h6>Download Excursion (Coming soon!)</h6>
+        <p>(c) Excursion</p>
+    </footer>
